# ATLAS

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  CLI.md  MAP.md  SETUP.md  SOURCES.md  V3_ABLATION_STUDY.md
geometric-lens/models/: pattern.py  route.py  tree_node.py
inference/: Dockerfile.v31
